# freecell-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  TODO.md
.github/workflows/: build.yml  tests.yml
doc/: card-codes.md  freecells.rs-old  game-state-template-explanation.txt  game-state-template.txt  pop_card.rs-old
example-inputs/: hard-solved-to-2.txt  hard-solved-to-3.txt  hard-solved-to-4.txt  hard-solved-to-5.txt  hard-solved-to-6.txt  hard-solved-to-8.txt  hard-solved-to-A.txt  hard-solved-to-Q.txt
example-inputs/invalid/: easy-10-instead-of-T.txt  easy-duplicate-card.txt  easy-invalid-card.txt  easy-missing-card-2.txt  easy-missing-card.txt
src/: cascade.rs  foundation.rs  freecells.rs  lib.rs  main.rs
src/card/: card.rs  colour.rs  mod.rs  rank.rs  suit.rs
src/card_collections/: card_collection.rs  cascade.rs  foundations.rs  freecell.rs  freecells.rs  mod.rs
src/freecell/: card.rs  card_collection.rs  cascade.rs  foundation.rs  freecells.rs  game_move.rs  game_state.rs  mod.rs  position.rs
src/game_move/: game_move.rs  mod.rs  position.rs
src/game_state/: allows_move.rs  debug_display.rs  from_str.rs  game_state.rs  legal_moves.rs  mod.rs
src/game_state_parser/: conversions_to_array.rs  error_messages.rs  mod.rs  parse_card.rs  parse_file.rs  validate_game_state.rs
src/state_graph/: mod.rs  node.rs  state_graph.rs
src/tests/: check_solution.rs  (+3 more)
test-inputs/: all_move_types_allowed.txt  easy-full-freecells.txt  easy-game-over.txt  easy.txt  every-move-type-possible.txt  hard-solved-to-7.txt  hard-solved-to-9.txt  hard-solved-to-J.txt  hard-solved-to-T-empty-cascades-omitted.txt  hard-solved-to-T.txt  hard.txt  one-card-left.txt
tests/: card.rs  card_collections.rs  game_state.rs  game_state_parser.rs
(+210 files in other folders)
