[package]
name = "freecell"
version = "0.1.0"
authors = ["- <@>"]
# description = "TODO"
# documentation = "TODO link"
# repository = "TODO link"
readme = "README.md"
# keywords = ["TODO1", "TODO2"]
# categories = ["TODO1", "TODO2"]
# license = "TODO"
edition = '2018'
# TODO there might be more that needs to go here: https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.5.1"
