[package]
name = "freecell"
version = "0.1.0"
authors = ["Arman Mielke <arman.mielke@yahoo.de>"]
edition = '2018'

description = "Game objects and rules for the solitaire card game FreeCell"
repository = "https://github.com/Arman-Mielke/freecell-rs"
readme = "README.md"
keywords = ["freecell", "solitaire", "patience", "game", "cards"]
categories = ["game-engines"]
license = "MIT OR Apache-2.0"


[dependencies]
arrayvec = "0.5.1"
serde = { version = "1.0", optional = true, features = ["derive"] }
