[package]
name = "freecell"
version = "0.1.0"
authors = ["Arman Mielke <arman.mielke@yahoo.de>"]
edition = '2018'
exclude = ["/.github/", ".gitignore"]

description = "Game objects and rules for the solitaire card game FreeCell"
repository = "https://github.com/Arman-Mielke/freecell-rs"
readme = "README.md"
keywords = ["freecell", "solitaire", "patience", "game", "cards"]
categories = ["game-engines"]
license = "MIT OR Apache-2.0"

[badges]
codecov = { repository = "Arman-Mielke/freecell-rs", service = "github" }

[features]
default = ["serde"]

[dependencies]
# TODO consider making these less specific
lazy_static = "1.4.0"
regex = "1.3.1"
serde = { version = "1.0", optional = true, features = ["derive"] }
